force-app/main/default/objects/NotificationSetting__mdt/NotificationSetting__mdt.object-meta.xml
<CustomObject>
    <label>Message Setting</label>
    <pluralLabel>Message Settings</pluralLabel>
</CustomObject>