force-app/main/default/objects/NotificationSetting__mdt/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>Event Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>