force-app/main/default/objects/NotificationSetting__mdt/fields/Notifications__c.field-meta.xml
<CustomField>
    <fullName>Notifications__c</fullName>
    <label>Notifications</label>
    <type>TextArea</type>
</CustomField>