force-app/main/default/objects/NotificationSetting__mdt/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <inlineHelpText>sObject Type the notification should be send for</inlineHelpText>
    <label>Object Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>DEMO_Alert_Settings</relationshipLabel>
    <relationshipName>DEMO_Alert_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>