force-app/main/default/objects/NotificationSetting__mdt/fields/RecipientExceptions__c.field-meta.xml
<CustomField>
    <fullName>RecipientExceptions__c</fullName>
    <inlineHelpText>Particular recipients that should be excluded such as the Submitter in an APH Approval Request</inlineHelpText>
    <label>Recipient Exceptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>