force-app/main/default/objects/NotificationSetting__mdt/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <label>Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>